--- a/YumBlazor/appsettings.json
+++ b/YumBlazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-YumBlazor-4bfe5ed4-6360-4774-a528-370b35ed0ac8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YumBlazor;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*"
 }
